fix previous shift

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -238,7 +238,7 @@ p {
     li a {
 	    color: #fff;
 	    text-decoration: none;
-	    margin-left: 2em;
+	    margin-right: 2em;
 	    &:hover {
 	    	text-decoration: underline;
 	    }
